projects/parser/source/com/mindbox/pe/server/parser/jtb/rule/DeploymentRuleParser.java
/* Generated By:JavaCC: Do not edit this line. DeploymentRuleParser.java */
package com.mindbox.pe.server.parser.jtb.rule;

import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ActivationDateLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.AdditiveExpression;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.AllQualifier;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.AndExpression;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ArgumentList;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ArgumentLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.Arguments;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.BooleanLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.CategoryIDLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.CategoryNameLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.CellValueLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ChannelIDLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ColumnLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ConditionalExpression;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ConditionalOperator;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.DeploymentRule;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ExcludingQualifier;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ExistExpression;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ExistExpressionPrefix;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ExistQualifier;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ExistQuantifier;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ExpirationDateLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.InvestorIDLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.LHS;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.LineageIDLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ListCreationArguments;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.LiteralExpression;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.LiteralList;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.MembershipOperator;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.MessageLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.MultiplicativeExpression;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.NodeChoice;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.NodeListOptional;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.NodeOptional;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.NodeSequence;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.NodeToken;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.NullLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.OrExpression;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.PrimaryExpression;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ProductIDLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.RHS;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.Reference;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.ReferenceInArgument;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.RowNumberLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.RuleNameLiteral;
import com.mindbox.pe.server.parser.jtb.rule.syntaxtree.UnaryExpression;

public final class DeploymentRuleParser implements DeploymentRuleParserConstants {

	final public DeploymentRule DeploymentRule() throws ParseException {
		trace_call("DeploymentRule");
		try {
			NodeToken n0;
			Token n1;
			LHS n2;
			NodeToken n3;
			Token n4;
			RHS n5;
			NodeToken n6;
			Token n7;

			{}
			n1 = jj_consume_token(IF);
			n0 = JTBToolkit.makeNodeToken(n1);
			n2 = LHS();
			n4 = jj_consume_token(THEN);
			n3 = JTBToolkit.makeNodeToken(n4);
			n5 = RHS();
			n7 = jj_consume_token(0);
			n7.beginColumn++;
			n7.endColumn++;
			n6 = JTBToolkit.makeNodeToken(n7);
			{
				if (true)
					return new DeploymentRule(n0, n2, n3, n5, n6);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("DeploymentRule");
		}
	}

	final public LHS LHS() throws ParseException {
		trace_call("LHS");
		try {
			OrExpression n0;

			{}
			n0 = OrExpression();
			{
				if (true)
					return new LHS(n0);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("LHS");
		}
	}

	final public OrExpression OrExpression() throws ParseException {
		trace_call("OrExpression");
		try {
			AndExpression n0;
			NodeListOptional n1 = new NodeListOptional();
			NodeSequence n2;
			NodeChoice n3;
			NodeToken n4;
			Token n5;
			NodeToken n6;
			Token n7;
			AndExpression n8;

			{}
			n0 = AndExpression();
			label_1 : while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case OR :
					case OR_SYM :
						;
						break;
					default :
						jj_la1[0] = jj_gen;
						break label_1;
				}
				n2 = new NodeSequence(2);
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case OR_SYM :
						n5 = jj_consume_token(OR_SYM);
						n4 = JTBToolkit.makeNodeToken(n5);
						n3 = new NodeChoice(n4, 0);
						break;
					case OR :
						n7 = jj_consume_token(OR);
						n6 = JTBToolkit.makeNodeToken(n7);
						n3 = new NodeChoice(n6, 1);
						break;
					default :
						jj_la1[1] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
				}
				n2.addNode(n3);
				n8 = AndExpression();
				n2.addNode(n8);
				n1.addNode(n2);
			}
			n1.nodes.trimToSize();
			{
				if (true)
					return new OrExpression(n0, n1);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("OrExpression");
		}
	}

	final public AndExpression AndExpression() throws ParseException {
		trace_call("AndExpression");
		try {
			ExistExpression n0;
			NodeListOptional n1 = new NodeListOptional();
			NodeSequence n2;
			NodeChoice n3;
			NodeToken n4;
			Token n5;
			NodeToken n6;
			Token n7;
			ExistExpression n8;

			{}
			n0 = ExistExpression();
			label_2 : while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case AND :
					case AND_SYM :
						;
						break;
					default :
						jj_la1[2] = jj_gen;
						break label_2;
				}
				n2 = new NodeSequence(2);
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case AND :
						n5 = jj_consume_token(AND);
						n4 = JTBToolkit.makeNodeToken(n5);
						n3 = new NodeChoice(n4, 0);
						break;
					case AND_SYM :
						n7 = jj_consume_token(AND_SYM);
						n6 = JTBToolkit.makeNodeToken(n7);
						n3 = new NodeChoice(n6, 1);
						break;
					default :
						jj_la1[3] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
				}
				n2.addNode(n3);
				n8 = ExistExpression();
				n2.addNode(n8);
				n1.addNode(n2);
			}
			n1.nodes.trimToSize();
			{
				if (true)
					return new AndExpression(n0, n1);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("AndExpression");
		}
	}

	final public ExistExpression ExistExpression() throws ParseException {
		trace_call("ExistExpression");
		try {
			NodeChoice n0;
			NodeSequence n1;
			ExistExpressionPrefix n2;
			NodeToken n3;
			Token n4;
			ConditionalExpression n5;
			ConditionalExpression n6;

			{}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case ANY :
				case ALL :
				case AT :
				case EXISTS :
					n1 = new NodeSequence(3);
					n2 = ExistExpressionPrefix();
					n1.addNode(n2);
					n4 = jj_consume_token(WITH);
					n3 = JTBToolkit.makeNodeToken(n4);
					n1.addNode(n3);
					n5 = ConditionalExpression();
					n1.addNode(n5);
					n0 = new NodeChoice(n1, 0);
					break;
				case TRUE :
				case FALSE :
				case NULL :
				case INTEGER_LITERAL :
				case FLOATING_POINT_LITERAL :
				case CHARACTER_LITERAL :
				case STRING_LITERAL :
				case IDENTIFIER :
				case LPAREN :
				case LBRACKET :
				case BANG :
				case PLUS :
				case MINUS :
				case PERCENT :
				case 79 :
					n6 = ConditionalExpression();
					n0 = new NodeChoice(n6, 1);
					break;
				default :
					jj_la1[4] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			{
				if (true)
					return new ExistExpression(n0);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("ExistExpression");
		}
	}

	final public ExistExpressionPrefix ExistExpressionPrefix() throws ParseException {
		trace_call("ExistExpressionPrefix");
		try {
			NodeChoice n0;
			NodeSequence n1;
			NodeChoice n2;
			ExistQualifier n3;
			ExistQuantifier n4;
			Reference n5;
			NodeOptional n6 = new NodeOptional();
			NodeToken n7;
			Token n8;
			NodeOptional n9 = new NodeOptional();
			ExcludingQualifier n10;
			NodeSequence n11;
			AllQualifier n12;
			Reference n13;

			{}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case ANY :
				case AT :
				case EXISTS :
					n1 = new NodeSequence(4);
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
						case ANY :
						case EXISTS :
							n3 = ExistQualifier();
							n2 = new NodeChoice(n3, 0);
							break;
						case AT :
							n4 = ExistQuantifier();
							n2 = new NodeChoice(n4, 1);
							break;
						default :
							jj_la1[5] = jj_gen;
							jj_consume_token(-1);
							throw new ParseException();
					}
					n1.addNode(n2);
					n5 = Reference();
					n1.addNode(n5);
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
						case IDENTIFIER :
							n8 = jj_consume_token(IDENTIFIER);
							n7 = JTBToolkit.makeNodeToken(n8);
							n6.addNode(n7);
							break;
						default :
							jj_la1[6] = jj_gen;
							;
					}
					n1.addNode(n6);
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
						case EXCLUDING :
							n10 = ExcludingQualifier();
							n9.addNode(n10);
							break;
						default :
							jj_la1[7] = jj_gen;
							;
					}
					n1.addNode(n9);
					n0 = new NodeChoice(n1, 0);
					break;
				case ALL :
					n11 = new NodeSequence(2);
					n12 = AllQualifier();
					n11.addNode(n12);
					n13 = Reference();
					n11.addNode(n13);
					n0 = new NodeChoice(n11, 1);
					break;
				default :
					jj_la1[8] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			{
				if (true)
					return new ExistExpressionPrefix(n0);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("ExistExpressionPrefix");
		}
	}

	final public ExistQualifier ExistQualifier() throws ParseException {
		trace_call("ExistQualifier");
		try {
			NodeChoice n0;
			NodeToken n1;
			Token n2;
			NodeToken n3;
			Token n4;

			{}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case EXISTS :
					n2 = jj_consume_token(EXISTS);
					n1 = JTBToolkit.makeNodeToken(n2);
					n0 = new NodeChoice(n1, 0);
					break;
				case ANY :
					n4 = jj_consume_token(ANY);
					n3 = JTBToolkit.makeNodeToken(n4);
					n0 = new NodeChoice(n3, 1);
					break;
				default :
					jj_la1[9] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			{
				if (true)
					return new ExistQualifier(n0);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("ExistQualifier");
		}
	}

	final public AllQualifier AllQualifier() throws ParseException {
		trace_call("AllQualifier");
		try {
			NodeToken n0;
			Token n1;

			{}
			n1 = jj_consume_token(ALL);
			n0 = JTBToolkit.makeNodeToken(n1);
			{
				if (true)
					return new AllQualifier(n0);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("AllQualifier");
		}
	}

	final public ExistQuantifier ExistQuantifier() throws ParseException {
		trace_call("ExistQuantifier");
		try {
			NodeToken n0;
			Token n1;
			NodeChoice n2;
			NodeToken n3;
			Token n4;
			NodeToken n5;
			Token n6;
			NodeToken n7;
			Token n8;

			{}
			n1 = jj_consume_token(AT);
			n0 = JTBToolkit.makeNodeToken(n1);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case LEAST :
					n4 = jj_consume_token(LEAST);
					n3 = JTBToolkit.makeNodeToken(n4);
					n2 = new NodeChoice(n3, 0);
					break;
				case MOST :
					n6 = jj_consume_token(MOST);
					n5 = JTBToolkit.makeNodeToken(n6);
					n2 = new NodeChoice(n5, 1);
					break;
				default :
					jj_la1[10] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			n8 = jj_consume_token(INTEGER_LITERAL);
			n7 = JTBToolkit.makeNodeToken(n8);
			{
				if (true)
					return new ExistQuantifier(n0, n2, n7);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("ExistQuantifier");
		}
	}

	final public ExcludingQualifier ExcludingQualifier() throws ParseException {
		trace_call("ExcludingQualifier");
		try {
			NodeToken n0;
			Token n1;
			NodeToken n2;
			Token n3;

			{}
			n1 = jj_consume_token(EXCLUDING);
			n0 = JTBToolkit.makeNodeToken(n1);
			n3 = jj_consume_token(IDENTIFIER);
			n2 = JTBToolkit.makeNodeToken(n3);
			{
				if (true)
					return new ExcludingQualifier(n0, n2);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("ExcludingQualifier");
		}
	}

	final public ConditionalExpression ConditionalExpression() throws ParseException {
		trace_call("ConditionalExpression");
		try {
			AdditiveExpression n0;
			NodeListOptional n1 = new NodeListOptional();
			NodeSequence n2;
			NodeChoice n3;
			ConditionalOperator n4;
			MembershipOperator n5;
			AdditiveExpression n6;

			{}
			n0 = AdditiveExpression();
			label_3 : while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case IN :
					case BETWEEN :
					case IS :
					case GT :
					case LT :
					case EQ :
					case LE :
					case GE :
					case NE :
						;
						break;
					default :
						jj_la1[11] = jj_gen;
						break label_3;
				}
				n2 = new NodeSequence(2);
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case IS :
					case GT :
					case LT :
					case EQ :
					case LE :
					case GE :
					case NE :
						n4 = ConditionalOperator();
						n3 = new NodeChoice(n4, 0);
						break;
					case IN :
					case BETWEEN :
						n5 = MembershipOperator();
						n3 = new NodeChoice(n5, 1);
						break;
					default :
						jj_la1[12] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
				}
				n2.addNode(n3);
				n6 = AdditiveExpression();
				n2.addNode(n6);
				n1.addNode(n2);
			}
			n1.nodes.trimToSize();
			{
				if (true)
					return new ConditionalExpression(n0, n1);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("ConditionalExpression");
		}
	}

	final public ConditionalOperator ConditionalOperator() throws ParseException {
		trace_call("ConditionalOperator");
		try {
			NodeChoice n0;
			NodeToken n1;
			Token n2;
			NodeToken n3;
			Token n4;
			NodeToken n5;
			Token n6;
			NodeToken n7;
			Token n8;
			NodeToken n9;
			Token n10;
			NodeToken n11;
			Token n12;
			NodeToken n13;
			Token n14;

			{}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case EQ :
					n2 = jj_consume_token(EQ);
					n1 = JTBToolkit.makeNodeToken(n2);
					n0 = new NodeChoice(n1, 0);
					break;
				case NE :
					n4 = jj_consume_token(NE);
					n3 = JTBToolkit.makeNodeToken(n4);
					n0 = new NodeChoice(n3, 1);
					break;
				case GT :
					n6 = jj_consume_token(GT);
					n5 = JTBToolkit.makeNodeToken(n6);
					n0 = new NodeChoice(n5, 2);
					break;
				case LT :
					n8 = jj_consume_token(LT);
					n7 = JTBToolkit.makeNodeToken(n8);
					n0 = new NodeChoice(n7, 3);
					break;
				case GE :
					n10 = jj_consume_token(GE);
					n9 = JTBToolkit.makeNodeToken(n10);
					n0 = new NodeChoice(n9, 4);
					break;
				case LE :
					n12 = jj_consume_token(LE);
					n11 = JTBToolkit.makeNodeToken(n12);
					n0 = new NodeChoice(n11, 5);
					break;
				case IS :
					n14 = jj_consume_token(IS);
					n13 = JTBToolkit.makeNodeToken(n14);
					n0 = new NodeChoice(n13, 6);
					break;
				default :
					jj_la1[13] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			{
				if (true)
					return new ConditionalOperator(n0);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("ConditionalOperator");
		}
	}

	final public MembershipOperator MembershipOperator() throws ParseException {
		trace_call("MembershipOperator");
		try {
			NodeChoice n0;
			NodeToken n1;
			Token n2;
			NodeToken n3;
			Token n4;

			{}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case BETWEEN :
					n2 = jj_consume_token(BETWEEN);
					n1 = JTBToolkit.makeNodeToken(n2);
					n0 = new NodeChoice(n1, 0);
					break;
				case IN :
					n4 = jj_consume_token(IN);
					n3 = JTBToolkit.makeNodeToken(n4);
					n0 = new NodeChoice(n3, 1);
					break;
				default :
					jj_la1[14] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			{
				if (true)
					return new MembershipOperator(n0);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("MembershipOperator");
		}
	}

	final public AdditiveExpression AdditiveExpression() throws ParseException {
		trace_call("AdditiveExpression");
		try {
			MultiplicativeExpression n0;
			NodeListOptional n1 = new NodeListOptional();
			NodeSequence n2;
			NodeChoice n3;
			NodeToken n4;
			Token n5;
			NodeToken n6;
			Token n7;
			MultiplicativeExpression n8;

			{}
			n0 = MultiplicativeExpression();
			label_4 : while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case PLUS :
					case MINUS :
						;
						break;
					default :
						jj_la1[15] = jj_gen;
						break label_4;
				}
				n2 = new NodeSequence(2);
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case PLUS :
						n5 = jj_consume_token(PLUS);
						n4 = JTBToolkit.makeNodeToken(n5);
						n3 = new NodeChoice(n4, 0);
						break;
					case MINUS :
						n7 = jj_consume_token(MINUS);
						n6 = JTBToolkit.makeNodeToken(n7);
						n3 = new NodeChoice(n6, 1);
						break;
					default :
						jj_la1[16] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
				}
				n2.addNode(n3);
				n8 = MultiplicativeExpression();
				n2.addNode(n8);
				n1.addNode(n2);
			}
			n1.nodes.trimToSize();
			{
				if (true)
					return new AdditiveExpression(n0, n1);
			}
			throw new Error("Missing return statement in function");
		}
		finally {
			trace_return("AdditiveExpression");
		}
	}

	final public MultiplicativeExpression MultiplicativeExpression() throws ParseException {
		trace_call("MultiplicativeExpression");
		try {
			UnaryExpression n0;
			NodeListOptional n1 = new NodeListOptional();
			NodeSequence n2;
			NodeChoice n3;
			NodeToken n4;
			Token n5;
			NodeToken n6;
			Token n7;
			NodeToken n8;
			Token n9;
